# opentelemetry-instrumentation-simplerr

./: README.rst  package.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: workflow.yml
src/opentelemetry/instrumentation/simplerr/: __init__.py  package.py  version.py
tests/: base_test.py  test_automatic.py  test_programmatic.py  test_sqlcommenter.py
tests/website/: index.py
